# RealTimeLister

./: .env.example  .gitattributes  .gitignore  README.md  env.hf-mirror.example  env.offline-model.example  env.online.example  pyproject.toml  requirements.txt
scripts/: download_faster_whisper_model.py
src/realtime_lister/: main.py
src/realtime_lister/static/: app.js  index.html  styles.css
