[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "realtime-lister"
version = "0.1.0"
description = "Realtime meeting translation using local ASR and company LLM translation API"
requires-python = ">=3.10"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"realtime_lister" = ["static/*"]
